fix: `newInstance` is deprecated. Use `getDeclaredConstructor().newInstance()` instead.